css/stylesheet.css
/* Sign-Up Form Stylesheet */

@font-face {
    font-family: "Rajdhani Regular";
    src: url("../fonts/rajdhani-regular-webfont.woff2") format('woff2'),
         url("../fonts/rajdhani-regular-webfont.woff") format('woff');
    font-weight: normal;
    font-style: normal;

}

* {
    /* border: solid 1px red; */
    transition: ease 0.2s;
}

body, html, button {
    appearance: none;
    padding: 0;
    margin: 0;
    border: none;
    
    font-family: "Rajdhani Regular", sans-serif;
    font-size: 1.1rem;
    
    box-sizing: border-box;
}

body {
    background-color: black;
    background-image: linear-gradient(to right, transparent, 70%, black), url(../images/cheng-feng-psdV2Rl-GvU-unsplash.jpg);
    background-size: 100vh;
    background-repeat: no-repeat;
    background-position-x: center;
}

#yoru-logo {
    position: relative;
    width: 16rem;
    height: 10rem;
    left: 50%;
    transform: translateX(-55%);
}

header {
    position: static;
    height: 10rem;
    width: 100vw;
}

#banner-image {
    float: left;
}

#background-photo-credit {
    position: absolute;
    bottom: -0;
    left: 50%;
    transform: translateX(-50%);
    text-align: center;
}

body {
    display: flex;
    flex-direction: column;
    position: relative;
    justify-content: space-between;
    color: white;
}

.form-container {
    width: 100%;

    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-self: center;
    align-items: center;
}

form {
    width: 100%;
    height: 31rem;

    display: flex;
    flex-flow: row wrap;
    justify-content: center;

    background-color: black;
    color: white;
    font-weight: bold;

    transition: ease 0.25s;
}

.form-row {
    width: 100%;
    min-width: 12rem;
    margin: 1rem 0;
    padding: 0 1rem;
    position: relative;
    
    text-align: center;
}

input {
    border-radius: 0.4rem;
    height: 1.5rem;
    width: 25rem;
}

.splash,
.footer {
    width: 100%;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), 30%, rgba(0, 0, 0, 0.5));

    text-align: center;
    height: 9rem;
}

.footer {
    height: 8rem;
}

h2 {
    font-size: 1.4rem;
}

button[type="submit"] {
    height: 3rem;
    width: 6rem;
    margin: 1rem 0;

    font-family: "Rajdhani Regular", sans-serif;
    font-size: 1rem;
}

.login {
    margin: 0;
}

.form-container {
    border-radius: 3px;
}

input[type="text"]:invalid,
input[type="password"]:invalid,
input[type="email"]:invalid {
    border-color: red;
}

input:required + div::before {
    padding: 0.1rem;

    background-color: red;
    content: "REQUIRED";
    font-size: 0.8rem;
    font-weight: bold;

    position: absolute;
    top: -0.1rem;
    left: 11rem;
}

@media only screen and (min-width: 1000px) and (min-height: 900px) {
    body {
        flex-direction: row;

        background-position-x: calc(50% - 30vw);
    }

    header {
        width: 70%;
    }

    #yoru-logo {
        position: fixed;
        width: 38vw;
        height: auto;
        top: 20%;
        left: 1.2vw;
        transform: translateX(0);
    }

    .form-container {
        width: 100%;
    }

    form {
        height: 35vh;
        justify-content: space-evenly;
    }

    .form-row {
        width: 40%;
        min-width: 12rem;
        margin: 1rem 0 1rem 0;
        text-align: left;
    }

    input {
        width: 13rem;
    }

    #background-photo-credit {
        position: absolute;
        bottom: 3%;
        left: calc(0% + 20vw);
    }

    .splash,
    .footer {
        height: 30vh;
        width: 100%;
        max-height: none;
    }

    .splash {
        display: flex;
        flex-flow: column wrap;
        justify-content: flex-end;
    }

    h2 {
        margin-top: 0.25rem;
        margin-bottom: 1rem;
    }

    .footer {
        text-align: left;
    }

    button[type="submit"] {
        margin: 1rem 0 1rem 2rem;
    }

    .login {
        margin: 0 0 1rem 2rem;
    }
}

@media only screen and (min-width: 2000px) {
    body {
        background-size: cover;
    }
}

